--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>
                 <a href="#" class="link-text">Assinar o Disney+</a>
                 <br>
-                <span class="text-medium">
+                <span class="text">
                     R$ 27,90/mês a 279,90/ano à vista*
                 </span>
             </p>
