--- a/index.html
+++ b/index.html
@@ -25,17 +25,20 @@
                 </span>
             </p>
             <ul class="hero__content__combos">
-                <li>
+                <li class="hero__content__combos__combo">
                     <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
                     <button>Assine agora</button>
                     <span class="text">R$ 45,90/mês</span>
                 </li>
-                <li>
+                <li class="hero__content__combos__combo">
                     <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
                     <button>Assine agora</button>
                     <span class="text">R$ 45,90/mês</span>
                 </li>
             </ul>
+            <p class="text--small">
+                *O preço pode variar caso a assinatura seja feita através de outras plataformas
+            </p>
         </div>
     </section>
 </body>
