--- a/index.html
+++ b/index.html
@@ -115,6 +115,40 @@
             </li>
         </ul>
     </section>
+
+    <section class="plans">
+        <h2 class="title--big">Escolha seu plano</h2>
+        <ul class="plans__list">
+            <li class="plans__list__item">
+                <img src="./dist/images/logos/disneyplus_underline.png" alt="DIsney+">
+                <strong class="title--small">R$ 27,90/mês</strong>
+                <p class="text">
+                    No disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.
+                </p>
+                <button>Assine agora</button>
+            </li>
+            <li class="plans__list__item">
+                <img src="./dist/images/logos/disneyplus_underline.png" alt="DIsney+">
+                <strong class="title--small">R$ 27,90/mês</strong>
+                <p class="text">
+                    No disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.
+                </p>
+                <button>Assine agora</button>
+            </li>
+            <li class="plans__list__item">
+                <img src="./dist/images/logos/disneyplus_underline.png" alt="DIsney+">
+                <strong class="title--small">R$ 27,90/mês</strong>
+                <p class="text">
+                    No disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.
+                </p>
+                <button>Assine agora</button>
+            </li>
+        </ul>
+        <p class="text--small">
+            *O preço pode variar caso a asinatura seja feita através de outras plataformas.
+        </p>
+    </section>
+
     <script src="./src/main.js"></script>
 </body>
 </html>
