--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
                     <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
-                    <button>Assine agora</button>
+                    <button class="button">Assine agora</button>
                     <span class="text">R$ 45,90/mês</span>
                 </li>
                 <li class="hero__content__combos__combo">
                     <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
-                    <button>Assine agora</button>
+                    <button class="button">Assine agora</button>
                     <span class="text">R$ 45,90/mês</span>
                 </li>
             </ul>
@@ -122,26 +122,26 @@
             <li class="plans__list__item">
                 <img src="./dist/images/logos/disneyplus_underline.png" alt="DIsney+">
                 <strong class="title--small">R$ 27,90/mês</strong>
-                <p class="text">
+                <p class="text--big">
                     No disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.
                 </p>
-                <button>Assine agora</button>
+                <button class="button">Assine agora</button>
             </li>
             <li class="plans__list__item">
-                <img src="./dist/images/logos/disneyplus_underline.png" alt="DIsney+">
-                <strong class="title--small">R$ 27,90/mês</strong>
-                <p class="text">
-                    No disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.
+                <img src="./dist/images/logos/disney_star_plus_sm.png" alt="DIsney+">
+                <strong class="title--small">R$ 45,90/mês</strong>
+                <p class="text--big">
+                    Asine Disney+ e Star+ juntos. Economize e aproveite agora os dois serviços por um preço único.
                 </p>
-                <button>Assine agora</button>
+                <button class="button">Assine agora</button>
             </li>
             <li class="plans__list__item">
-                <img src="./dist/images/logos/disneyplus_underline.png" alt="DIsney+">
-                <strong class="title--small">R$ 27,90/mês</strong>
-                <p class="text">
-                    No disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.
+                <img src="./dist/images/logos/disney_star_plus_starzplay_underline.png" alt="DIsney+">
+                <strong class="title--small">R$ 55,90/mês</strong>
+                <p class="text--big">
+                    Disney+, Star+ e STARZPLAY em um plano especial. Assine agora os três serviços juntos.
                 </p>
-                <button>Assine agora</button>
+                <button class="button">Assine agora</button>
             </li>
         </ul>
         <p class="text--small">
