--- a/index.html
+++ b/index.html
@@ -225,7 +225,30 @@
                     O que está incluído no Disney+?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Resposta da pergunta
+                    <p>
+                        <span>O Disney+ oferece:</span>
+                    </p>
+                    <p>
+                        <span>• Experiência premium sem intervalos comerciais.</span>
+                    </p>
+                    <p>
+                        <span>• As melhores histórias da Disney, Pixar, Marvel, Star Wars e National Geographic, tudo em um só lugar</span>
+                    </p>
+                    <p>
+                        <span>• Groupwatch: assista junto com amigos ou familiares, mesmo separados</span>
+                    </p>
+                    <p>
+                        <span>• Downloads ilimitados em até 10 dispositivos compatíveis</span>
+                    </p>
+                    <p>
+                        <span>• Mais de 300 títulos em 4K UHD e HDR</span>
+                    </p>
+                    <p>
+                        <span>• A possibilidade de assistir em até 4 dispositivos compat´vieis simultaneamente sem custo adicional</span>
+                    </p>
+                    <p>
+                        <span>• IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+</span>
+                    </p>
                 </div>
             </li>
             <li class="faq__questions__item">
@@ -233,7 +256,9 @@
                     Já tem o disney+ ou o Star+ e quer o Combo+?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Resposta da pergunta
+                    <p>
+                        <span>Basta usar o mesmo e-mail do cadastro quando as inscrições abrirem. O sistema vai identificar e pronto!</span>
+                    </p>
                 </div>
             </li>
             <li class="faq__questions__item">
@@ -241,7 +266,9 @@
                     Quais formas de pagamento posso utilizar?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Resposta da pergunta
+                    <p>
+                        <span>Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas parceiras como Google Play Store, App Store da Apple, Mercado Livre e provedores locais de TV, telefonia e internet.</span>
+                    </p>
                 </div>
             </li>
             <li class="faq__questions__item">
@@ -249,7 +276,27 @@
                     Como posso ver conteúdo com classificação indicativa até 16 e 18?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Resposta da pergunta
+                    <p>
+                        <span>Para ver conteúdos com classificação indicativa até 16 e 18 anos no Disney+, você pode definir a classificação etária de um perfil:</span>
+                    </p>
+                    <p>
+                        <span>• Acesse seus perfis e selecione "Editar perfis"</span>
+                    </p>
+                    <p>
+                        <span>• Escolha o perfil que deseja editar</span>
+                    </p>
+                    <p>
+                        <span>• Em "Controles parentais", selecione "Classificação etária"</span>
+                    </p>
+                    <p>
+                        <span>• Digite a sua senha</span>
+                    </p>
+                    <p>
+                        <span>• Escolha a classificação etária desejada e pressione "Salvar" </span>
+                    </p>
+                    <p>
+                        <span>Os conteúdos com classificação superior à selecionada não serão exibidos quando você navegar ou pesquisar títulos no Disney+</span>
+                    </p>
                 </div>
             </li>
         </ul>
