--- a/index.html
+++ b/index.html
@@ -307,6 +307,15 @@
             <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
             <ul class="footer__links">
                 <li class="footer__links__item">
+                    <div class="language-selector">
+                        <img src="./dist/images/icones/globe.svg" alt="Globo do mundo">
+                        <select>
+                            <option>English</option>
+                            <option selected>Português</option>
+                        </select>
+                    </div>
+                </li>
+                <li class="footer__links__item">
                     <a class="text--small" href="#">Termos e Condições de Uso</a>
                 </li>
                 <li class="footer__links__item">
