--- a/index.html
+++ b/index.html
@@ -365,6 +365,6 @@
         </div>
     </footer>
 
-    <script src="./src/main.js"></script>
+    <script src="./dist/scripts/main.js"></script>
 </body>
 </html>
